--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
                 <div class="card p-4 mb-2"  id="previousSearch">
                 </div>
+                <div class="card p-4 mb-2"  id="ClearHistorySection">
+                    <button class="btn btn-warning" id="clearHistoryBtn">Clear History</button>
+                </div>
 
             </div>
             <div class="col">
